# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linter-tests-check.yml
page_loader/: __init__.py  functions.py  helper.py  io_functions.py  namer.py  page_loader.py  resources_processor.py  url.py  url_processor.py
page_loader/scripts/: page_loader.py
tests/: test_page_loader.py
tests/fixtures/: downloaded_website.html
tests/fixtures/mocks/: sub_html.html
